# I.BA_CVAI_MM.PROJECT

./: .gitignore  README.md  pyproject.toml  search_similar.py
primitive/: extract_features.py
sift/: extract_sift_features.py  search_similair_images.py
